--- a/style/index.css
+++ b/style/index.css
@@ -1,11 +1,14 @@
 .flexbox_containers_1 {
-    padding:20px;
+    padding: 90px;
     display: flex;
     width: 100%;
     height: 100vh;
-    background-color: pink;
+    background-color: darkgray;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
+ 
+    
 }
 
 .flexbox_container_1_1 {
@@ -18,6 +21,7 @@
     justify-content: flex-start;
     align-items: flex-end;
     margin-right: 10px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
     
 }
@@ -59,6 +63,7 @@
     justify-content: center;
     align-items: stretch;
     margin-left: 10px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
     
 }
@@ -99,16 +104,13 @@
     padding: 20px;
     width: 468px;
     height: 160px;
-    background-color: blanchedalmond;
+    background-color: pink;
     border-radius: 8px;
-    justify-content: flex-start;
-    align-items: flex-end;
+    justify-content: flex-end;
+    align-items: center;
     margin-right: 10px;
-
-    
-
-    
-}
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}   
 
 .flexbox_card_1_3_1 {
     width: 78px;
@@ -144,11 +146,10 @@
     height: 160px;
     background-color: blanchedalmond;
     border-radius: 8px;
-    justify-content: flex-start;
-    align-items: flex-end;
+    justify-content: space-between;
+    align-items: flex-start;
     margin-left: 10px;
-
-    
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .flexbox_card_1_4_1 {
@@ -166,7 +167,6 @@
     background-color: lightgrey;
     border-radius: 4px;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
-    
 }
 
 .flexbox_card_1_4_3 {
@@ -176,6 +176,7 @@
     border-radius: 4px;
     margin-left: 20px;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
+    align-self: flex-end;
 }
 
 .flexbox_container_1_5 {
@@ -185,39 +186,43 @@
     height: 160px;
     background-color: blanchedalmond;
     border-radius: 8px;
-    justify-content: flex-start;
-    align-items: flex-end;
+    justify-content: space-around;
+    align-items: stretch;
     margin-right: 10px;
-
-
-    
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .flexbox_card_1_5_1 {
     width: 78px;
     height: 78px;
-    background-color: lightgray;
+    background-color:  rgb(189, 221, 189);
     border-radius: 4px;
-    margin-right: 20px;
+    margin-left: 63px;
+    margin-right: 27px;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
+    height: unset;
 }
 
 .flexbox_card_1_5_2 {
     width: 78px;
     height: 78px;
-    background-color: lightgrey;
+    background-color:  rgb(189, 221, 189);
     border-radius: 4px;
+    margin-left: 27px;
+    margin-right: 27px;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
-    
+    align-self: center;
 }
 
 .flexbox_card_1_5_3 {
     width: 78px;
     height: 78px;
-    background-color: lightgrey;
+    background-color:  rgb(189, 221, 189);
     border-radius: 4px;
-    margin-left: 20px;
+    margin-left: 27px;
+    margin-right: 63px;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
+    height: unset;
 }
 
 .flexbox_container_1_6 {
@@ -225,19 +230,18 @@
     padding: 20px;
     width: 468px;
     height: 160px;
-    background-color: blanchedalmond;
+    background-color: lightblue;
     border-radius: 8px;
-    justify-content: flex-start;
-    align-items: flex-end;
+    justify-content: center;
+    align-items: center;
     margin-left: 10px;
-
-    
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .flexbox_card_1_6_1 {
     width: 78px;
     height: 78px;
-    background-color: lightgray;
+    background-color: blanchedalmond;
     border-radius: 4px;
     margin-right: 20px;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
@@ -246,15 +250,16 @@
 .flexbox_card_1_6_2 {
     width: 78px;
     height: 78px;
-    background-color: lightgrey;
+    background-color: blanchedalmond;
     border-radius: 4px;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
+    flex-grow: 0.5;
 }
 
 .flexbox_card_1_6_3 {
     width: 78px;
     height: 78px;
-    background-color: lightgrey;
+    background-color: blanchedalmond;
     border-radius: 4px;
     margin-left: 20px;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
